force-app/main/default/objects/Interwega_Import__c/Interwega_Import__c.object-meta.xml
<CustomObject>
    <label>Interwega Import</label>
    <nameField>
        <displayFormat>IWImp-{00000000}</displayFormat>
        <label>Interwega Import Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interwega Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>