force-app/main/default/objects/Interwega_Import__c/fields/Interwega_Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Interwega_Business_Area__c</fullName>
    <label>Interwega Business Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>