force-app/main/default/objects/Interwega_Import__c/fields/Interwega_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Interwega_Open_Balance__c</fullName>
    <label>Interwega Open Balance (incl fees) (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>