force-app/main/default/objects/Interwega_Import__c/fields/Interwega_Status__c.field-meta.xml
<CustomField>
    <fullName>Interwega_Status__c</fullName>
    <label>Interwega Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>